package moe.yuru.myserieslist.entities;

public class User {
    
}